开发递归组件

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,5 +1,6 @@
 @width: 100%;
 @fontFamily: 'Microsoft YaHei';
+@defaultBtnColor: #1789e1;
 html, body {
   font-family: @fontFamily;
   font-size: 14px;
@@ -27,6 +28,10 @@ td {
   th {
     text-align: center;
   }
+}
+.default-btn-color {
+  background-color: @defaultBtnColor;
+  color: #fff;
 }
 .zifi-container {
   width: @width;
