--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -46,9 +46,9 @@ td {
 .default-form {
   font-size: 18px;
   label {
-
+    font-weight: normal;
   }
-  input {
+  input,select {
     height: 40px !important;
     line-height: 40px !important;
     font-size: 18px !important;
@@ -57,6 +57,9 @@ td {
   .form-group {
     margin-right: 20px;
   }
+}
+.text-right {
+  text-align: right;
 }
 .default-input {
   height: 40px !important;
