框架调整成多应用开发，开发设备管理页面

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -39,6 +39,11 @@ td {
   background-color: @defaultBtnColor;
   color: #fff;
   cursor: pointer;
+  .default-icon {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px;
+  }
   &:hover {
     background-color: @defaultBtnActiveColor;
   }
@@ -56,6 +61,7 @@ td {
   }
   .form-group {
     margin-right: 20px;
+    margin-bottom: 20px;
   }
 }
 .text-right {
