控制面板切图，导入loading插件

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -6,7 +6,7 @@
 @lineColor: #efefef;
 html, body {
   font-family: @fontFamily;
-  font-size: 14px;
+  font-size: 18px;
 }
 a {
   &:hover,
@@ -63,6 +63,9 @@ td {
     margin-right: 20px;
     margin-bottom: 20px;
   }
+}
+.default-form-radio {
+  font-size: 18px;
 }
 .text-right {
   text-align: right;
