--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -144,3 +144,12 @@ td {
     }
   }
 }
+//validate
+.help {
+  display: block;
+  font-size: 11px;
+  margin-top: 5px;
+}
+.help.is-danger {
+  color: #ff3860;
+}
