策略管理切图

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -223,6 +223,13 @@ td {
   .el-form-item__content {
     font-size: 18px;
   }
+  .el-slider__input {
+    input {
+      height: 32px !important;
+      line-height: 32px !important;
+      box-shadow: none;
+    }
+  }
 }
 .el-dialog {
   .el-dialog__header {
