重构回路控制器页面

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -57,6 +57,7 @@ td {
     background-color: #eee;
     padding-bottom: 10px;
     border-radius: 5px;
+    margin-bottom: 20px;
     thead {
       background-color: #eee;
       border-top-left-radius: 5px;
