--- a/src/applications/lamp/index.less
+++ b/src/applications/lamp/index.less
@@ -41,7 +41,8 @@
         .edit-icon,
         .set-icon,
         .delete-icon,
-        .repeal-icon{
+        .repeal-icon,
+        .issue-icon{
           display: inline-block;
           text-align: center;
           vertical-align: middle;
@@ -66,6 +67,11 @@
           width: 20px;
           height: 22px;
           background-image: url("./assets/control/repeal.png");
+        }
+        .issue-icon {
+          width: 21px;
+          height: 22px;
+          background-image: url("./assets/control/send.png");
         }
       }
     }
