--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -10,6 +10,13 @@ html, body {
   font-family: @fontFamily;
   font-size: 18px;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+input[type="number"]{
+  -moz-appearance: textfield;
+}
 a {
   &:hover,
   &:focus{
